# A2UI

./: .gitignore  .prettierignore  .yarnrc.yml  AGENTS.md  README.md  hooks.py  mkdocs.yaml  package.json
.gemini/: GEMINI.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: check_license.yml  composer_build_and_test.yml  docs.yml  e2e_test.yaml  editor_build.yml  enforce-formatting.yml  inspector_build.yml  kotlin_agent_sdk_build_and_test.yml  lit_build_and_test.yml  lit_samples_build.yml  ng_build_and_test.yml  python_agent_sdk_build_and_test.yml  python_samples_build.yml  react_renderer.yml  validate_specifications.yml  web_build_and_test.yml
agent_sdks/: agent_sdk_guide.md
agent_sdks/conformance/: conformance_schema.json
agent_sdks/kotlin/: build.gradle.kts
agent_sdks/python/: README.md  agent_development.md
agent_sdks/python/a2ui_core/: README.md  pyproject.toml
agent_sdks/python/a2ui_core/scripts/: generate_schemas.py
agent_sdks/python/a2ui_core/src/a2ui/core/basic_catalog/: __init__.py  components.py  function_apis.py  styles.py
agent_sdks/python/a2ui_core/src/a2ui/core/catalog/: __init__.py  functions.py
agent_sdks/python/a2ui_core/src/a2ui/core/schema/: __init__.py  client_capabilities.py  client_to_server.py  common_types.py  constants.py  server_to_client.py
agent_sdks/python/a2ui_core/tests/: test_components.py  test_generate_schemas.py  test_schema.py
docs/: glossary.md  index.md  quickstart.md  roadmap.md
docs/concepts/: catalogs.md  components.md  data-binding.md  (+3 more)
eval/: DESIGN.md  tasks.py
scripts/: fix_format.sh
(+562 files in other folders)
